2006-07-12 Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug #3594: No lang resolution for title in <tx_templavoila> element

2006-07-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* t3lib_cs: trim the charset for normalization

2006-07-11 Dmitry Dulepov <typo3@accio.lv>

	* Fixed bug: missing check for PHP version in t3lib_div::getUrl()

2006-07-10  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #3005: captionSplit.cObject functionality in IMGTEXT is back as documented. But marked as "deprecated".
	* Fixed bug #3258: rendering issues in CSS styled IMGTEXT with noRows setting fixed.
	* Fixed bug #3416: first caption was being doubled with "renderMethod=table".

2006-07-10 Dmitry Dulepov <typo3@accio.lv>

	* Bug: "Publish time" label appeared where "Unpublish time" should appear

2006-07-07  Karsten Dambekalns  <karsten@typo3.org>

	* Added background color to TYPO3 error pages.

2006-07-07  Michael Stucki  <michael@typo3.org>

	* Changed version numbers in t3lib/config_default.php
	* Minor corrections to CVSreadme.txt
	* Install Tool displayed TYPO3_version instead of TYPO3_branch
	* Fixed bug #2462: typo3temp/ subdirectories were not created automatically
	* Fixed bug #3362: Windows systems print phpinfo under some circumstances
	* Fixed bug #1153 again: Adding parameters to showpic.php is not always expected: Add a new property to skip adding these parameters (JSwindow.altUrl_noDefaultParams)

2006-07-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3779: edit form on page broken
	* Fix bug #3085: broken option frame (palettes) in IE

2006-07-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #3427: config.spamProtectEmailAddresses may garble mail link

2006-07-01  Karsten Dambekalns  <karsten@typo3.org>

	* DBAL update (sysext):
		- this update closes bugs #3638, #2106, #2866, #3754 (for Firefox, broken in MSIE) and maybe a few more
		- Implemented support for sysLog() on connection failure