@@ -1,3 +1,9 @@
+2006-07-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* Fix bug #3600: config.formMailCharset is not honoured
+	* t3lib_formmail: do charset conversion for mails when config.formMailCharset is set or config.metaCharset different from config.renderCharset
+	* t3lib_formmail: use $this->messageid of base class 
+
 2006-07-12 Dmitry Dulepov <typo3@accio.lv>
 
 	* Fixed bug #3594: No lang resolution for title in <tx_templavoila> element
